# pyraingen

./: .gitignore  .gitignore_extra  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pyraingen/: __init__.py  aggregaterainfall.py  computeifd.py  computesubdailykde.py  convert_daily_to_NetCDF.py  dailysequences.py  datevectojd.py  get_coeffs.py  get_example_data.py  get_for_path.py  get_fortran_data.py  get_index.py  getdaysperyear.py  getfragments.py  getndailysims.py  getseasonfromday.py  getwetstate.py  global_.py  ifdcond.py  ifdcondobjfun.py  ifdcorrection.py  jdtodatevec.py  loadsubdailystationmeta.py  maxgooddays.py  nearbystations.py  numberofyears.py  paddata.py  producedailynetcdf.py  producesubdailynetcdf.py  readcoefficients.py  readdata.py  readsynthrainnetcdf.py  regionalisedailysim.py  regionaliseddailysim.py  regionalisedsubdailysim.py  subdailydisaggregation.py  subdailysimloop0.py  subdailysimloop1.py  targetstations.py
src/pyraingen/data/: index.nc
src/pyraingen/data/example/daily/: rev_dr011111.txt  rev_dr022222.txt  rev_dr033333.txt  rev_dr044444.txt  rev_dr055555.txt
src/pyraingen/data/example/ifd/: 012345_ifds.csv  012345_ifds_scaled.csv
src/pyraingen/data/example/subdaily/: daily_012345.nc  index_example.nc  plv010000.nc  plv010100.nc  plv011110.nc  plv012120.nc  plv013130.nc  plv014140.nc  plv015150.nc  plv016160.nc  plv017170.nc  plv018180.nc  plv019190.nc  plv020000.nc  plv020200.nc  plv021210.nc  plv022220.nc  plv030000.nc  plv040000.nc  plv050000.nc  plv060000.nc  plv070000.nc  plv080000.nc  plv090000.nc
src/pyraingen/fortran_daily/: CMakeLists.txt  data.inc  occrcor.inc  p30avsd.inc  pcond.inc  regionalised_daily.for  regionalised_daily.pyf  regionalised_dailyT.for
tests/: daily.nc  nearby_station_details.out  occr.inc  para.inc  pminmax.inc  rf_amt.inc  stat.inc  stat.out  t1.out  test_pyraingen.py  test_regionaliseddailysim.py
