[tool.poetry]
name = "pyraingen"
version = "0.1.0"
description = "A package for stochastically generating daily and subdaily rainfall with ifd constaining."
authors = ["Caleb Dykman"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
