[tool.poetry]
name = "pyraingen"
version = "0.1.0"
description = "A package for stochastically generating daily and subdaily rainfall with ifd constaining."
authors = ["Caleb Dykman"]
license = "None"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.23.5"
matplotlib = ">=3.6.2"
numba = ">=0.56.4"
netCDF4 = ">=1.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
